// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should render with help text 1`] = `
<View
  accessibilityLabelledBy="radio-group-15-label"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    alignItems="center"
    display="flex"
    flexDirection="row"
    flexWrap="wrap"
    gap="spacing.0"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 0,
        },
      ]
    }
  >
    <Text
      color="hsla(216, 27%, 36%, 1)"
      fontFamily="Lato"
      fontSize="12px"
      fontStyle="normal"
      fontWeight={700}
      lineHeight="16px"
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 16,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="left"
      textDecorationLine="none"
    >
      Select fruits
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="hsla(217, 56%, 17%, 1)"
          fontFamily="Lato"
          fontSize="15px"
          fontStyle="normal"
          fontWeight={400}
          lineHeight="24px"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
          textAlign="left"
          textDecorationLine="none"
        >
          , Select one
        </Text>
      </View>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      gap="spacing.1"
      marginBottom="spacing.1"
      marginTop="spacing.1"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
            "gap": 4,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        accessibilityDescribedBy="radio-16-helptext-17"
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityRole="radio"
        accessibilityState={
          Object {
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        name="radio-group-15"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
        value="apple"
      >
        <View
          isChecked={false}
          isNegative={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "hsla(220, 27%, 98%, 1)",
                "borderColor": "hsla(216, 19%, 89%, 1)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "display": "flex",
                "height": 16,
                "justifyContent": "center",
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 8,
                "marginTop": 3,
                "transitionDuration": 150,
                "transitionTimingFunction": "0.7 0 0.5 1",
                "width": 16,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            color="hsla(216, 27%, 36%, 1)"
            fontFamily="Lato"
            fontSize="15px"
            fontStyle="normal"
            fontWeight={400}
            lineHeight="24px"
            style={
              Array [
                Object {
                  "color": "hsla(216, 27%, 36%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            textAlign="left"
            textDecorationLine="none"
          >
            Apple
          </Text>
        </View>
      </View>
      <View
        accessibilityDescribedBy="radio-18-helptext-19"
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityRole="radio"
        accessibilityState={
          Object {
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        name="radio-group-15"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
        value="mango"
      >
        <View
          isChecked={false}
          isNegative={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "hsla(220, 27%, 98%, 1)",
                "borderColor": "hsla(216, 19%, 89%, 1)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "display": "flex",
                "height": 16,
                "justifyContent": "center",
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 8,
                "marginTop": 3,
                "transitionDuration": 150,
                "transitionTimingFunction": "0.7 0 0.5 1",
                "width": 16,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            color="hsla(216, 27%, 36%, 1)"
            fontFamily="Lato"
            fontSize="15px"
            fontStyle="normal"
            fontWeight={400}
            lineHeight="24px"
            style={
              Array [
                Object {
                  "color": "hsla(216, 27%, 36%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            textAlign="left"
            textDecorationLine="none"
          >
            Mango
          </Text>
        </View>
      </View>
      <View
        accessibilityDescribedBy="radio-20-helptext-21"
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityRole="radio"
        accessibilityState={
          Object {
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        name="radio-group-15"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
        value="orange"
      >
        <View
          isChecked={false}
          isNegative={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "hsla(220, 27%, 98%, 1)",
                "borderColor": "hsla(216, 19%, 89%, 1)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "display": "flex",
                "height": 16,
                "justifyContent": "center",
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 8,
                "marginTop": 3,
                "transitionDuration": 150,
                "transitionTimingFunction": "0.7 0 0.5 1",
                "width": 16,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            color="hsla(216, 27%, 36%, 1)"
            fontFamily="Lato"
            fontSize="15px"
            fontStyle="normal"
            fontWeight={400}
            lineHeight="24px"
            style={
              Array [
                Object {
                  "color": "hsla(216, 27%, 36%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            textAlign="left"
            textDecorationLine="none"
          >
            Orange
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="hsla(216, 16%, 60%, 1)"
        fontFamily="Lato"
        fontSize="11px"
        fontStyle="italic"
        fontWeight={400}
        lineHeight="16px"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 11,
              "fontStyle": "italic",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="left"
        textDecorationLine="none"
      >
        Select one
      </Text>
    </View>
  </View>
</View>
`;

exports[`<RadioGroup /> should render with label 1`] = `
<View
  accessibilityLabelledBy="radio-group-7-label"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    alignItems="center"
    display="flex"
    flexDirection="row"
    flexWrap="wrap"
    gap="spacing.0"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 0,
        },
      ]
    }
  >
    <Text
      color="hsla(216, 27%, 36%, 1)"
      fontFamily="Lato"
      fontSize="12px"
      fontStyle="normal"
      fontWeight={700}
      lineHeight="16px"
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 16,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="left"
      textDecorationLine="none"
    >
      Select fav fruit
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="hsla(217, 56%, 17%, 1)"
          fontFamily="Lato"
          fontSize="15px"
          fontStyle="normal"
          fontWeight={400}
          lineHeight="24px"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
          textAlign="left"
          textDecorationLine="none"
        >
          , 
        </Text>
      </View>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      gap="spacing.1"
      marginBottom="spacing.1"
      marginTop="spacing.1"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
            "gap": 4,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        accessibilityDescribedBy="radio-1-helptext-2"
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityRole="radio"
        accessibilityState={
          Object {
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        name="radio-group-7"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
        value="apple"
      >
        <View
          isChecked={false}
          isNegative={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "hsla(220, 27%, 98%, 1)",
                "borderColor": "hsla(216, 19%, 89%, 1)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "display": "flex",
                "height": 16,
                "justifyContent": "center",
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 8,
                "marginTop": 3,
                "transitionDuration": 150,
                "transitionTimingFunction": "0.7 0 0.5 1",
                "width": 16,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            color="hsla(216, 27%, 36%, 1)"
            fontFamily="Lato"
            fontSize="15px"
            fontStyle="normal"
            fontWeight={400}
            lineHeight="24px"
            style={
              Array [
                Object {
                  "color": "hsla(216, 27%, 36%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            textAlign="left"
            textDecorationLine="none"
          >
            Apple
          </Text>
        </View>
      </View>
      <View
        accessibilityDescribedBy="radio-3-helptext-4"
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityRole="radio"
        accessibilityState={
          Object {
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        name="radio-group-7"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
        value="mango"
      >
        <View
          isChecked={false}
          isNegative={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "hsla(220, 27%, 98%, 1)",
                "borderColor": "hsla(216, 19%, 89%, 1)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "display": "flex",
                "height": 16,
                "justifyContent": "center",
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 8,
                "marginTop": 3,
                "transitionDuration": 150,
                "transitionTimingFunction": "0.7 0 0.5 1",
                "width": 16,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            color="hsla(216, 27%, 36%, 1)"
            fontFamily="Lato"
            fontSize="15px"
            fontStyle="normal"
            fontWeight={400}
            lineHeight="24px"
            style={
              Array [
                Object {
                  "color": "hsla(216, 27%, 36%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            textAlign="left"
            textDecorationLine="none"
          >
            Mango
          </Text>
        </View>
      </View>
      <View
        accessibilityDescribedBy="radio-5-helptext-6"
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityRole="radio"
        accessibilityState={
          Object {
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        name="radio-group-7"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
        value="orange"
      >
        <View
          isChecked={false}
          isNegative={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "hsla(220, 27%, 98%, 1)",
                "borderColor": "hsla(216, 19%, 89%, 1)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "display": "flex",
                "height": 16,
                "justifyContent": "center",
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 8,
                "marginTop": 3,
                "transitionDuration": 150,
                "transitionTimingFunction": "0.7 0 0.5 1",
                "width": 16,
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            color="hsla(216, 27%, 36%, 1)"
            fontFamily="Lato"
            fontSize="15px"
            fontStyle="normal"
            fontWeight={400}
            lineHeight="24px"
            style={
              Array [
                Object {
                  "color": "hsla(216, 27%, 36%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            textAlign="left"
            textDecorationLine="none"
          >
            Orange
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
